# telerust

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: 2026-04-27-telerust-implementation-v2.md
docs/old/superpowers/plans/: 2026-04-19-telerust-implementation.md
docs/old/superpowers/specs/: 2026-04-18-telerust-design.md
src/: cli.rs  config.rs  daemon.rs  lib.rs  message.rs  pairing.rs  secret.rs  telegram.rs
src/ipc/: http_server.rs  mod.rs  unix_server.rs
tests/: integration.rs
