[package]
name = "telerust"
version = "0.1.0"
edition = "2021"

[lib]
name = "telerust"
path = "src/lib.rs"

[[bin]]
name = "telerust"
path = "src/bin/telerust.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
daemonize = "0.5.0"
directories = "6"
futures = "0.3.32"
keyring = "3"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
whoami = "2.1.2"

[dev-dependencies]
reqwest = { version = "0.13.3", features = ["json"] }
tempfile = "3.27.0"
tokio-test = "0.4.5"
